# task

./: .gitignore  Cargo.toml  TODO.md  flake.nix  run
src/: lib.rs  main.rs  task.rs  tasklist.rs
src/views/: helpview.rs  mainview.rs  mod.rs  popup.rs  taskaddview.rs  taskdetailview.rs  taskdoneview.rs  taskeditview.rs  tasklistview.rs  tasknextview.rs
