[package]
name = "task"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = "0.29.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_millis = "0.1.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
